--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="esportes.html">
+                    <a href="https://luc4sgl25.github.io/esportes/">
                         <span class="icon"><img class="im" src="ims/2.png" alt=""></span>
                         <span class="text-link">ESPORTES</span>
                     </a>
                 </li>
 
                 <li class="item-menu">
-                    <a href=".html">
+                    <a href="https://carolyneios.github.io/showemusicas/">
                         <span class="icon"><img class="im" src="ims/6.png" alt=""></span>
                         <span class="text-link">MÚSICA</span>
                     </a>
@@ -109,26 +109,26 @@
                     <div class="overlay"></div>
                     <div class="top" id="top-cart">
                         <button id="closeButton">
-                            <i class="fa-solid fa-xmark"></i>
+                          
                         </button>
-                        <h3>Carrinho de Compras</h3>
+                        <h3></h3>
                     </div>
                     <ul id="buyItems">
-                        <h4 class="empty">O seu carrinho está vazio</h4>
+                        <h4 class="empty"></h4>
                         <!-- <li class="buyItem">
 						<img src="Images/producs-images/Mobiles/galaxynote10.png">
 						<div>
 							<h5>Products Name</h5>
-							<h6>$199</h6>
+							<h6></h6>
 							<div>
-								<button>-</button>
-								<span class="countOfProduct">1</span>
-								<button>+</button>
+								<button></button>
+								<span class="countOfProduct"></span>
+								<button></button>
 							</div>
 						</div>
 					</li> -->
                     </ul>
-                    <button class="btn checkout hidden">Comprar</button>
+                    <button class="btn checkout hidden"></button>
                 </div>
 
             </div>
@@ -341,11 +341,11 @@
         <!---------------MENU RESPONSIVO------------- -->
 
         <div class="menuzinho">
-            <div class="esporte"> <a href="#"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
+            <div class="esporte"> <a href="https://luc4sgl25.github.io/esportes/"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
             <div class="teatro"><a href="#"> <img src="ims/5.png" alt="" class="emagem"></a> </div>
             <div class="nsei"><a href="index.html"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
             <div class="cinema"> <a href="#"> <img src="ims/6.png" alt="" class="emagem"></a></div>
-            <div class="musica"><a href="musc.html"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
+            <div class="musica"><a href="https://carolyneios.github.io/showemusicas/"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
         </div>
 
         <script src="menu.js"></script>
