--- a/formatura.html
+++ b/formatura.html
@@ -35,21 +35,21 @@
             <!---------------------------------MENU LATERAL  -------------------------->
             <ul>
                 <li class="item-menu ativo">
-                    <a href="index.html">
+                    <a href="">
                         <span class="icon"><img class="im" src="ims/1.png" alt=""></span>
                         <span class="text-link">HOME</span>
                     </a>
                 </li>
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://luc4sgl25.github.io/esportes/">
                         <span class="icon"><img class="im" src="ims/2.png" alt=""></span>
                         <span class="text-link">ESPORTES</span>
                     </a>
                 </li>
 
                 <li class="item-menu">
-                    <a href="musc.html">
+                    <a href="https://carolyneios.github.io/showemusicas/">
                         <span class="icon"><img class="im" src="ims/6.png" alt=""></span>
                         <span class="text-link">MÚSICA</span>
                     </a>
@@ -58,7 +58,7 @@
     
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://dav1sz.github.io/cinema-a/">
                         <span class="icon"><img class="im" src="ims/4.png" alt=""></span>
                         <span class="text-link">CINEMA</span>
                     </a>
