--- a/shakira.html
+++ b/shakira.html
@@ -78,14 +78,14 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://luc4sgl25.github.io/esportes/">
                         <span class="icon"><img class="im" src="ims/2.png" alt=""></span>
                         <span class="text-link">ESPORTES</span>
                     </a>
                 </li>
 
                 <li class="item-menu">
-                    <a href="musc.html">
+                    <a href="https://carolyneios.github.io/showemusicas/">
                         <span class="icon"><img class="im" src="ims/6.png" alt=""></span>
                         <span class="text-link">MÚSICA</span>
                     </a>
@@ -95,6 +95,12 @@
                     <a href="#">
                         <span class="icon"><img class="im" src="ims/3.png" alt=""></span>
                         <span class="text-link">TEATRO</span>
+                    </a>
+                </li>
+		     <li class="item-menu">
+                    <a href="https://dav1sz.github.io/cinema-a/">
+                        <span class="icon"><img class="im" src="ims/4.png" alt=""></span>
+                        <span class="text-link">CINEMA</span>
                     </a>
                 </li>
 
@@ -299,8 +305,8 @@
             <div class="esporte"> <a href="#"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
             <div class="teatro"><a href="#"> <img src="ims/5.png" alt="" class="emagem"></a> </div>
             <div class="nsei"><a href="index.html"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
-            <div class="cinema"> <a href="#"> <img src="ims/6.png" alt="" class="emagem"></a></div>
-            <div class="musica"><a href="musc.html"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
+            <div class="cinema"> <a href="https://dav1sz.github.io/cinema-a/"> <img src="ims/6.png" alt="" class="emagem"></a></div>
+            <div class="musica"><a href="https://carolyneios.github.io/showemusicas/"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
         </div>
 
 
