--- a/rehot.html
+++ b/rehot.html
@@ -52,14 +52,14 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://luc4sgl25.github.io/esportes/">
                         <span class="icon"><img class="im" src="ims/2.png" alt=""></span>
                         <span class="text-link">ESPORTES</span>
                     </a>
                 </li>
 
                 <li class="item-menu">
-                    <a href="musc.html">
+                    <a href="https://carolyneios.github.io/showemusicas/">
                         <span class="icon"><img class="im" src="ims/6.png" alt=""></span>
                         <span class="text-link">MÚSICA</span>
                     </a>
@@ -67,7 +67,7 @@
 
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://dav1sz.github.io/cinema-a/">
                         <span class="icon"><img class="im" src="ims/4.png" alt=""></span>
                         <span class="text-link">CINEMA</span>
                     </a>
