--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </li>
 
                 <li class="item-menu">
-                    <a hrefhttps://emerson14machado.github.io/Teatro/">
+                    <a  href="https://emerson14machado.github.io/Teatro/">
                         <span class="icon"><img class="im" src="ims/3.png" alt=""></span>
                         <span class="text-link">TEATRO</span>
                     </a>
