--- a/xama.html
+++ b/xama.html
@@ -60,14 +60,14 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://luc4sgl25.github.io/esportes/">
                         <span class="icon"><img class="im" src="ims/2.png" alt=""></span>
                         <span class="text-link">ESPORTES</span>
                     </a>
                 </li>
 
                 <li class="item-menu">
-                    <a href="musc.html">
+                    <a href="https://carolyneios.github.io/showemusicas/">
                         <span class="icon"><img class="im" src="ims/6.png" alt=""></span>
                         <span class="text-link">MÚSICA</span>
                     </a>
@@ -75,14 +75,14 @@
 
                 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://dav1sz.github.io/cinema-a/index.html">
                         <span class="icon"><img class="im" src="ims/4.png" alt=""></span>
                         <span class="text-link">CINEMA</span>
                     </a>
                 </li>
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://emerson14machado.github.io/Teatro/">
                         <span class="icon"><img class="im" src="ims/3.png" alt=""></span>
                         <span class="text-link">TEATRO</span>
                     </a>
@@ -292,11 +292,11 @@
 
         <!---------------menu responsivo------------- -->
         <div class="menuzinho">
-            <div class="esporte"> <a href="#"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
-            <div class="teatro"><a href="#"> <img src="ims/5.png" alt="" class="emagem"></a> </div>
+            <div class="esporte"> <a href="https://luc4sgl25.github.io/esportes/"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
+            <div class="teatro"><a href="https://emerson14machado.github.io/Teatro/"> <img src="ims/5.png" alt="" class="emagem"></a> </div>
             <div class="nsei"><a href="index.html"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
-            <div class="cinema"> <a href="#"> <img src="ims/6.png" alt="" class="emagem"></a></div>
-            <div class="musica"><a href="musc.html"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
+            <div class="cinema"> <a href="https://dav1sz.github.io/cinema-a/index.html"> <img src="ims/6.png" alt="" class="emagem"></a></div>
+            <div class="musica"><a href="https://carolyneios.github.io/showemusicas/"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
         </div>
 
 
