--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!--------------------------------------------MENU LATERAL---------------------------------------->
             <ul>
                 <li class="item-menu ativo">
-                    <a href="index.html">
+                    <a href="https://carolyneios.github.io/levelupevent/">
                         <span class="icon"><img class="im" src="ims/1.png" alt=""></span>
                         <span class="text-link">HOME</span>
                     </a>
@@ -55,7 +55,7 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://dav1sz.github.io/cinema-a/">
                         <span class="icon"><img class="im" src="ims/4.png" alt=""></span>
                         <span class="text-link">CINEMA</span>
                     </a>
@@ -76,7 +76,7 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="#">
+                    <a href="https://carolyneios.github.io/sobrenois/">
                         <span class="icon"><img class="im" src="ims/8.png" alt=""></span>
                         <span class="text-link">SOBRE</span>
                     </a>
@@ -343,7 +343,7 @@
         <div class="menuzinho">
             <div class="esporte"> <a href="https://luc4sgl25.github.io/esportes/"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
             <div class="teatro"><a href="https://emerson14machado.github.io/Teatro/"> <img src="ims/5.png" alt="" class="emagem"></a> </div>
-            <div class="nsei"><a href="index.html"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
+            <div class="nsei"><a href="https://carolyneios.github.io/levelupevent/"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
             <div class="cinema"> <a href="https://dav1sz.github.io/cinema-a/"> <img src="ims/6.png" alt="" class="emagem"></a></div>
             <div class="musica"><a href="https://carolyneios.github.io/showemusicas/"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
         </div>
