--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
 
                 <ol class="listol">
                     <h2> INSTITUCIONAL </h2>
-                    <li><a href="#">Termos e condições</a></li>
+                    <li><a href="https://carolyneios.github.io/termorecondicoes/">Termos e condições</a></li>
                     <li><a href="#">Sobre o site</a></li>
                     <li><a href="#">Mapa do site</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="https://carolyneios.github.io/sobrenois/">Sobre</a></li>
                 </ol>
 
                 <ol class="listol">
@@ -333,8 +333,8 @@
                 </div>
             </div>
             <div class="copy">
-                <h1 class="logo"> level up</h1>
-                <p> Todos os direitos reservados para a página level up 2023&reg;&copy;</p>
+                <h1 class="logo"> Level Up</h1>
+                <p> Todos os direitos reservados para a página Level Up 2023&reg;&copy;</p>
             </div>
         </footer>
 
