--- a/rehot.html
+++ b/rehot.html
@@ -45,7 +45,7 @@
             <!---------------------------------MENU LATERAL  -------------------------->
             <ul>
                 <li class="item-menu ativo">
-                    <a href="index.html">
+                    <a href="https://carolyneios.github.io/levelupevent/">
                         <span class="icon"><img class="im" src="ims/1.png" alt=""></span>
                         <span class="text-link">HOME</span>
                     </a>
@@ -249,10 +249,10 @@
 
                 <ol class="listol">
                     <h2> INSTITUCIONAL </h2>
-                    <li><a href="#">Termos e condições</a></li>
+                    <li><a href="https://carolyneios.github.io/termorecondicoes/">Termos e condições</a></li>
                     <li><a href="#">Sobre o site</a></li>
                     <li><a href="#">Mapa do site</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="https://carolyneios.github.io/sobrenois/#">Sobre</a></li>
                 </ol>
 
                 <ol class="listol">
@@ -268,8 +268,8 @@
                 </div>
             </div>
             <div class="copy">
-                <h1 class="logo"> level up</h1>
-                <p> Todos os direitos reservados para a página level up 2023&reg;&copy;</p>
+                <h1 class="logo"> Level Up</h1>
+                <p> Todos os direitos reservados para a página Level Up 2023&reg;&copy;</p>
             </div>
         </footer>
 
@@ -278,7 +278,7 @@
         <div class="menuzinho">
             <div class="esporte"> <a href="https://luc4sgl25.github.io/esportes/"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
             <div class="teatro"><a href="https://emerson14machado.github.io/Teatro/"> <img src="ims/5.png" alt="" class="emagem"></a> </div>
-            <div class="nsei"><a href="index.html"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
+            <div class="nsei"><a href="https://carolyneios.github.io/levelupevent/"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
             <div class="cinema"> <a href="https://dav1sz.github.io/cinema-a/index.html"> <img src="ims/6.png" alt="" class="emagem"></a></div>
             <div class="musica"><a href="https://carolyneios.github.io/showemusicas/"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
         </div>
