--- a/shakira.html
+++ b/shakira.html
@@ -71,7 +71,7 @@
             <!---------------------------------MENU LATERAL  -------------------------->
             <ul>
                 <li class="item-menu ativo">
-                    <a href="index.html">
+                    <a href="https://carolyneios.github.io/levelupevent/">
                         <span class="icon"><img class="im" src="ims/1.png" alt=""></span>
                         <span class="text-link">HOME</span>
                     </a>
@@ -271,10 +271,10 @@
 
                 <ol class="listol">
                     <h2> INSTITUCIONAL </h2>
-                    <li><a href="#">Termos e condições</a></li>
-                    <li><a href="#">Sobre o site</a></li>
+                    <li><a href="https://carolyneios.github.io/termorecondicoes/">Termos e condições</a></li>
+                    <li><a href="https://carolyneios.github.io/sobrenois/#">Sobre o site</a></li>
                     <li><a href="#">Mapa do site</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="https://carolyneios.github.io/sobrenois/#">Sobre</a></li>
                 </ol>
 
                 <ol class="listol">
@@ -304,7 +304,7 @@
         <div class="menuzinho">
             <div class="esporte"> <a href="https://luc4sgl25.github.io/esportes/"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
             <div class="teatro"><a href="https://emerson14machado.github.io/Teatro/"> <img src="ims/5.png" alt="" class="emagem"></a> </div>
-            <div class="nsei"><a href="index.html"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
+            <div class="nsei"><a href="https://carolyneios.github.io/levelupevent/"> <img src="ims/1.png" alt="" class="emagem"></a> </div>
             <div class="cinema"> <a href="https://dav1sz.github.io/cinema-a/"> <img src="ims/6.png" alt="" class="emagem"></a></div>
             <div class="musica"><a href="https://carolyneios.github.io/showemusicas/"> <img src="ims/3.png" alt="" class="emagem"></a> </div>
         </div>
