--- a/formatura.html
+++ b/formatura.html
@@ -175,7 +175,7 @@
 
 
                             <h6 class="price">
-                                <span class="cifrao"> R$ </span><span class="priceValue">0.00</span>
+                                <span class="cifrao"> R$ </span><span class="priceValue"> Free</span>
                             </h6>
 
 
