--- a/formatura.html
+++ b/formatura.html
@@ -100,7 +100,9 @@
         <div class="container">
 
             <div class="esquerda">
+		     <a href="https://carolyneios.github.io/levelupevent/">
                 <img src="ims/upsemfundo.png" alt="" class="level">
+		     </a>
             </div>
 
             <div class="direita">
