--- a/formatura.html
+++ b/formatura.html
@@ -257,27 +257,27 @@
                 <input type="radio" name="radio" id="imagem6">
 
                 <div class="imagem img1">
-                    <img src="ims/giff.gif" alt="Girassol" class="carrocel">
+                    <img src="ims/giff.gif" alt="" class="carrocel">
                 </div>
 
                 <div class="imagem img2">
-                    <img src="ims/tree.jpg" alt="Girassol" class="carrocel">
+                    <img src="ims/tree.jpg" alt="" class="carrocel">
                 </div>
 
                 <div class="imagem img3">
-                    <img src="ims/one.jpg" alt="Girassol" class="carrocel">
+                    <img src="ims/one.jpg" alt="" class="carrocel">
                 </div>
 
                 <div class="imagem img4">
-                    <img src="ims/two.jpg" alt="Girassol" class="carrocel">
+                    <img src="ims/two.jpg" alt="" class="carrocel">
                 </div>
 
                 <div class="imagem img5">
-                    <img src="ims/tree.jpg" alt="Girassol" class="carrocel">
+                    <img src="ims/tree.jpg" alt="" class="carrocel">
                 </div>
 
                 <div class="imagem img6">
-                    <img src="ims/five.jpg" alt="Girassol" class="carrocel">
+                    <img src="ims/five.jpg" alt="" class="carrocel">
                 </div>
 
             </div>
@@ -328,7 +328,7 @@
             </div>
         </footer>
 
-        <!---------------menu responsivo------------- -->
+        <!---------------MENU RESPONSIVO------------- -->
         <div class="menuzinho">
             <div class="esporte"> <a href="https://luc4sgl25.github.io/esportes/"> <img src="ims/2.png" alt="" class="emagem"></a> </div>
             <div class="teatro"><a href="https://emerson14machado.github.io/Teatro/"> <img src="ims/5.png" alt="" class="emagem"></a> </div>
