--- a/formatura.html
+++ b/formatura.html
@@ -177,7 +177,7 @@
 
 
                             <h6 class="price">
-                                <span class="cifrao"> R$ </span><span class="priceValue"> Free</span>
+                                <span class="cifrao"> </span><span class="priceValue"> Free</span>
                             </h6>
 
 
